2003-02-25  Shivram U  <shivaram.upadhyayula@wipro.com>
 
 	* src/ghex-window.c (ghex_window_close): If the last view has been 
 	destroyed, unref the document.

2003-01-06  Jaka Mocnik  <jaka@gnu.org>

	* src/ui.c (close_cb): fixed a possible crash.
	* src/gtkhex.c: enabled pasting of primary selection with
	middle mouse button. move cursor properly after cutting or
	pasting data.
	* configure.in: bumped version to 2.0.0; tagged as GHEX_2_0_0;
	branch ghex-2-0.
	* src/preferences.c (set_prefs): set display font.
	* src/access/accessiblegtkhex.c (accessible_gtk_hex_real_initialize): 
	applied patch from padraig o'briain. fixes #101136.

2002-12-23  Jaka Mocnik  <jaka@gnu.org>

	* configure.in: bumped version to 1.99.90; tagged as GHEX_1_99_90.
	* src/gtkhex.c: use colors from widget styles to ensure text
	visibility when using high-contrast, accessible themes. initial
	patch was kinldy provided by Pasupathi Duraisamy of Wipro. thanx!
	* src/gtkhex.h (struct _GtkHexClass): removed colormap and cursor
	color members.

2002-11-24  Jaka Mocnik  <jaka@gnu.org>

	* src/hex-document.c, src/ui.c: applied patch from Hideoshi
	Tajima to convert all filenames to utf8 before being used in
	strings for GTK+ to display.

2002-11-10  Jaka Mocnik  <jaka@gnu.org>

	* src/ghex-window.c (ghex_window_add_doc_to_list): encode strings
	in XML.
	* ghex.spec.in: applied patch from Dan Hensley.
	* src/chartable.c: enable insertion with keyboard.
	
2002-11-09  Jaka Mocnik  <jaka@gnu.org>

	* src/ghex-ui.xml: 'About...' -> 'About'. really fixes #96771.

2002-10-26  Jaka Mocnik  <jaka@gnu.org>

	* configure.in: version 1.99.2. tagged as GHEX_1_99_2.

2002-10-26  Jaka Mocnik  <jaka@gnu.org>

	* src/ghex-window.c (ghex_window_ok_to_close): new function that
	replaces hex_document_ok_to_close() as this is really a window and
	not document issue.
	(ghex_window_save_as): new function that handles saving to a new
	file instead of having this code duplicated all over.