@@ -1,3 +1,9 @@
+2003-02-28  Jaka Mocnik  <jaka@gnu.org>
+
+	* src/chartable.c: fix ESC key press handler bug that hid the treeview
+	instead of the window!
+	* src/converter.c: hide converter on ESC.
+
 2003-02-25  Shivram U  <shivaram.upadhyayula@wipro.com>
  
  	* src/ghex-window.c (ghex_window_close): If the last view has been 
